[not verified] Partner Coupon: Fix post-connection redeem CTA design on mobile

--- a/projects/js-packages/partner-coupon/components/redeem-partner-coupon-post-connection/style.scss
+++ b/projects/js-packages/partner-coupon/components/redeem-partner-coupon-post-connection/style.scss
@@ -20,13 +20,61 @@
 	}
 
 	&__layout {
-		display: flex;
-		justify-content: stretch;
+		display: grid;
+
+		@include break-medium {
+			grid-template-columns: auto 34%;
+			grid-template-areas:
+"content aside"
+"subcontent aside";
+		}
 	}
 
 	&__content {
-		flex: 1 0 66%;
-		padding: 48px;
+		padding: 32px 24px 24px 24px;
+
+		@include break-medium {
+			padding: 48px 48px 0 48px;
+		}
+	}
+
+	&__subcontent {
+		padding: 24px;
+
+		@include break-medium {
+			padding: 0 48px 48px 48px;
+		}
+
+		> p:first-child {
+			margin-top: 0;
+
+			@include break-medium {
+				margin-top: 1em;
+			}
+		}
+	}
+
+	&__aside {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 48px 0;
+		background: var( --jp-white-off );
+		background-size: cover;
+		background-position: center;
+
+		@include break-medium {
+			grid-area: aside;
+			padding: 0;
+		}
+
+		img {
+			width: 90px;
+
+			@include break-medium {
+				width: auto;
+			}
+		}
 	}
 
 	&__logo {
@@ -37,21 +85,11 @@
 		font-weight: bold;
 
 		> * + * {
-			margin-left: 16px;
-		}
-	}
+			margin-left: 8px;
 
-	&__aside {
-		display: none;
-		background: var( --jp-white-off );
-		background-size: cover;
-		background-position: center;
-
-		@include break-xlarge {
-			flex: 1 1 34%;
-			display: flex;
-			justify-content: center;
-			align-items: center;
+			@include break-mobile {
+				margin-left: 16px;
+			}
 		}
 	}
 
@@ -77,7 +115,7 @@
 		list-style-type: none;
 		padding: 0;
 
-		@include break-medium {
+		@include break-xlarge {
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: space-between;
@@ -89,7 +127,7 @@
 			padding-left: 30px;
 			margin-bottom: 9px;
 
-			@include break-medium {
+			@include break-xlarge {
 				flex: 0 1 calc( 50% - 12px );
 			}
 		}
@@ -97,5 +135,13 @@
 
 	.jp-action-button {
 		margin-top: 20px;
+
+		button {
+			width: 100%;
+
+			@include break-medium {
+				width: auto;
+			}
+		}
 	}
 }
